# BlazeAI

./: .gitignore  AGENTS.md  CLAUDE.md  CMakeLists.txt  README.md  build.ps1  convert_models.py
src/: capture.cpp  capture.h  config_io.cpp  config_io.h  cuda_process.cu  cuda_process.h  detector.cpp  detector.h  input.h  main.cpp  makcu.h  overlay.cpp  overlay.h  tracker.cpp  tracker.h  vigem_input.h
